Change profile settings page. Fix vertical align in some lists. Minor improves.

--- a/styles/css/your_style.css
+++ b/styles/css/your_style.css
@@ -198,3 +198,11 @@ body.container {
 	padding-left: 10px;
 	font-size: 23px;
 }
+
+.MessageBoxButtonSection {
+	margin-top: 20px;
+}
+
+.elemTextPaddingNgRepeat>span {
+	padding-top: 7px;
+}
